--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,24 @@
   <meta name="description" content="Website performance monitoring, simplified. Get easy metrics and actionable alerts to make your website go faster.">
   <link rel="me" href="https://twitter.com/requestmetrics">
 
-  <!-- favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
   <link rel="manifest" href="/assets/images/favicon/site.webmanifest.json">
 
-  <link rel="stylesheet" href="/assets/vendor/fontello/css/fontello.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&family=Source+Code+Pro&display=auto">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Muli:wght@400;600;700&family=Poppins:wght@400;600&display=auto">
   <link rel="stylesheet" href="/assets/css/main.css">
+
   <script src="/assets/js/banner.js"></script>
+
+  <script>
+    // Configuration of inline chat widget Chatty.
+    // Options:
+    //   open @Boolean True if chat is open on load. False if closed.
+    window._chatty = { open: true };
+  </script>
+  <script src="http://localhost:3001/assets/vendor/chatty/chatty.js"></script>
 </head>
 
   <body class=" index">
@@ -27,7 +36,7 @@
     <div class="spacer"></div>
     <div class="site-logo">
       <a class="site-title" href="/">
-        <img src="/assets/images/request_metrics_logo.png" height="64px" width="190px" alt="Request Metrics"/>
+        <img src="/assets/images/request_metrics_logo.png" alt="Request Metrics"/>
       </a>
     </div>
     <nav class="site-nav flex">
@@ -149,7 +158,8 @@
     <div class="callout flex">
       <div class="picture">
         <a href="/assets/images/callouts/callout-distribution-2400.png" target="_blank">
-            <img src="/assets/images/callouts/callout-distribution-2400.png" alt="Chart page views and the distribution user load time"/>
+          <img src="/assets/images/callouts/callout-distribution-2400.png"
+            alt="Chart page views and the distribution user load time" />
         </a>
       </div>
       <div class="blurb">
@@ -165,7 +175,8 @@
     <div class="callout left flex">
       <div class="picture">
         <a href="/assets/images/callouts/callout-breakdown-2400.png" target="_blank">
-            <img src="/assets/images/callouts/callout-breakdown-2400.png" alt="Chart of the breakdown of page load steps"/>
+          <img src="/assets/images/callouts/callout-breakdown-2400.png"
+            alt="Chart page views and the distribution user load time" />
         </a>
       </div>
       <div class="blurb">
@@ -180,7 +191,8 @@
     <div class="callout flex">
       <div class="picture">
         <a href="/assets/images/callouts/callout-webvital-2400.png" target="_blank">
-            <img src="/assets/images/callouts/callout-webvital-2400.png" alt="Web Vital Performance Metrics"/>
+          <img src="/assets/images/callouts/callout-webvital-600.png"
+              alt="Chart page views and the distribution user load time" />
         </a>
       </div>
       <div class="blurb">
@@ -192,7 +204,6 @@
         </p>
       </div>
     </div>
-
 
   </div>
 </section>
@@ -266,42 +277,6 @@
 
     </div>
 
-  </div>
-</section>
-
-<section class="feature-wall">
-  <div class="container flex">
-    <h2 style="font-size:2.4em">Request Metrics in Action</h2>
-  </div>
-  <div class="wall-container">
-    <div class="wall-frame">
-      <div class="wall-row odd">
-        <a target="_blank" href="/assets/images/features/search-javascript-errors.png">
-          <img src="/assets/images/features/search-javascript-errors.png" alt="Natural Searching" />
-          <h3>Natural Searching</h3>
-        </a>
-        <a target="_blank" href="/assets/images/features/javascript-error-ignore-rules.png">
-          <img src="/assets/images/features/javascript-error-ignore-rules.png" alt="Ignore Noisy Errors" />
-          <h3>Ignore Noisy Errors</h3>
-        </a>
-        <a target="_blank" href="/assets/images/features/javascript-error-metadata.png">
-          <img src="/assets/images/features/javascript-error-metadata.png" alt="Enrich with Custom Metadata" />
-          <h3>Enrich with Custom Metadata</h3>
-        </a>
-        <a target="_blank" href="/assets/images/features/javascript-error-filtering.png">
-          <img src="/assets/images/features/javascript-error-filtering.png" alt="Discoverable Report Filters" />
-          <h3>Discoverable Report Filters</h3>
-        </a>
-        <a target="_blank" href="/assets/images/features/javascript-error-notifications.png">
-          <img src="/assets/images/features/javascript-error-notifications.png" alt="Intuitive Error Notifications" />
-          <h3>Intuitive Error Notifications</h3>
-        </a>
-        <a target="_blank" href="/assets/images/features/search-javascript-errors.png">
-          <img src="/assets/images/features/search-javascript-errors.png" alt="Natural Searching" />
-          <h3>Natural Searching</h3>
-        </a>
-      </div>
-    </div>
   </div>
 </section>
 
@@ -387,10 +362,6 @@
   </div>
 
 </footer>
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&family=Source+Code+Pro&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Muli:wght@400;600;700&family=Poppins:wght@400;600&display=swap">
-  <script src="assets/vendor/chatty/chatty.js"></script>
 
   </body>
 </html>
