switch to utils

--- a/public/index.html
+++ b/public/index.html
@@ -380,8 +380,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&family=Source+Code+Pro&display=auto">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Muli:wght@400;600;700&family=Poppins:wght@400;600&display=auto">
 
-<script src="/assets/js/lazyloader.js" defer></script>
-<script src="/assets/js/perf.js" defer></script>
+<script src="/assets/js/util/lazyloader.js" defer></script>
+<script src="/assets/js/util/perf.js" defer></script>
 <script src="/assets/js/banner.js" defer></script>
 
 <script>
