update website copy

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Request Metrics | Website performance monitoring, simplified. Get easy metrics and actionable alerts to make
-    your website go faster. | Request Metrics</title>
-  <meta name="description"
-    content="Website performance monitoring, simplified. Get easy metrics and actionable alerts to make your website go faster.">
+  <title>Request Metrics | Unified Analytics and Client-Side Observability. Get easy metrics and actionable alerts to
+    make
+    your users happy and system better.</title>
+  <meta name="description" content="Unified Analytics and Client-Side Observability. Get easy metrics and actionable alerts to make
+    your users happy and system better.">
   <link rel="me" href="https://twitter.com/requestmetrics">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
@@ -83,12 +84,11 @@
 
       <div class="container relative">
         <div class="cta">
-          <h2>Faster websites for just $10/month</h2>
-          <h1>Website performance monitoring</h1>
+          <h1>Unified Analytics</h1>
           <p>
-            Web performance monitoring doesn't have to be complicated, <em>or expensive</em>.
-            Get simplified performance metrics and actionable alerts to make your website go fast&mdash;without breaking
-            your budget.
+            Request Metrics monitors your software as real users see it–everything else is just diagnostics.
+            Get simplified visibility into your traffic, users, behavior, performance, and APIs, all with a single
+            script tag.
           </p>
           <div class="flex cta-buttons">
             <div class="flex-column start">
@@ -126,19 +126,19 @@
           <ul>
             <li class="do flex">
               <img src="/assets/images/checkmark-circle.svg" alt="checkmark">
-              <span>Real User Performance Monitoring</span>
+              <span>User Session Analytics</span>
             </li>
             <li class="do flex">
               <img src="/assets/images/checkmark-circle.svg" alt="checkmark">
-              <span>Core Web Vital Metrics</span>
+              <span>Web Performance</span>
             </li>
             <li class="do flex">
               <img src="/assets/images/checkmark-circle.svg" alt="checkmark">
-              <span>Simple Reports &amp; Alerting</span>
+              <span>API Monitoring</span>
             </li>
             <li class="do flex">
               <img src="/assets/images/checkmark-circle.svg" alt="checkmark">
-              <span>Predictably Affordable</span>
+              <span>Error Reporting</span>
             </li>
           </ul>
         </div>
